app/styles/main.css
/* ... */
.infobar-bottom-articles .scroll-view {
  height: 100%;
  overflow-x: scroll;
}

.infobar-bottom-articles .scroll-view ul {
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  list-style: none;
  margin: 0;
}

.infobar-bottom-articles .scroll-view ul li {
  -webkit-flex: 0 0 120px;
  -ms-flex: 0 0 120px;
  flex: 0 0 120px;
  display: block;
  overflow: hidden;
}

.infobar-bottom-articles .scroll-view ul li a {
  display: block;
  position: relative;
  height: 120px;
  background-size: cover;
  transition: all 1s ease;
}

.infobar-bottom-articles .scroll-view ul li a:hover {
  -ms-transform: scale(1.1);
  -webkit-transform: scale(1.1);
  transform: scale(1.1);
}

.infobar-bottom-articles .scroll-view ul li a:hover span{
  opacity: 1;
}


.infobar-bottom-articles .scroll-view ul li a span{
  display: block;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  padding: 20px 15px;
  opacity: 0;
  font-size:11px;
  transition: all 2s ease;
  background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65)));
  background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
  background: -ms-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); 
  background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); 
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 ); 
}

.error {
    background: #fff;
    box-shadow: 1px 1px 8px rgba(102,102,102,.3);
    z-index: 100;
    position:absolute;
    width: 100%;
    padding:10px;
    transition: opacity .25s ease-in-out;
   -moz-transition: opacity .25s ease-in-out;
   -webkit-transition: opacity .25s ease-in-out;
}

/* ------------------------------------------------------------------ *\

Animations

\* ------------------------------------------------------------------ */

/* On page enter, play fadeIn animation */
.ng-enter {
	-webkit-animation-name: fadeIn;
		animation-name: fadeIn;
	-webkit-animation-duration: 1s;
		animation-duration: 1s;
	-webkit-animation-fill-mode: both;
		animation-fill-mode: both;
}

/* Add this class to setup animations */
.animated {
  -webkit-animation-duration: 1s;
        animation-duration: 1s;
  -webkit-animation-fill-mode: both;
        animation-fill-mode: both;
}

/* Fly animation */
@-webkit-keyframes fly {
    0%   { left: 45%; }
    50%   { left: 100%; }
    51%   { left: -5%; opacity: 0; }
    52%   { left: 0%; opacity: 1; }
    100% { left: 45%; }
}

@-moz-keyframes fly {
    0%   { left: 45%; }
    50%   { left: 100%; }
    51%   { left: -5%; opacity: 0; }
    52%   { left: 0%; opacity: 1; }
    100% { left: 45%; }
}

@keyframes fly {
  0%   { left: 45%; }
  50%   { left: 100%; }
  51%   { left: -5%; opacity: 0; }
  52%   { left: 0%; opacity: 1; }
  100% { left: 45%; }
}

.fly {
	-webkit-animation: fly 30s linear infinite; 
    -moz-animation:    fly 30s linear infinite;
    animation:         fly 30s linear infinite;
}

/* fadeIn animation */
@-webkit-keyframes fadeIn {
  0% {opacity: 0;}
  100% {opacity: 1;}
}

@keyframes fadeIn {
  0% {opacity: 0;}
  100% {opacity: 1;}
}

.fadeIn {
  -webkit-animation-name: fadeIn;
          animation-name: fadeIn;
}

/* fadeInDown animation */
@-webkit-keyframes fadeInDown {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0, -100%, 0);
            transform: translate3d(0, -100%, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: none;
            transform: none;
  }
}

@keyframes fadeInDown {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0, -100%, 0);
            transform: translate3d(0, -100%, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: none;
            transform: none;
  }
}

.fadeInDown {
  -webkit-animation-name: fadeInDown;
          animation-name: fadeInDown;
}

/* fadeInUp animation */
@-webkit-keyframes fadeInUp {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0, 100%, 0);
            transform: translate3d(0, 100%, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: none;
            transform: none;
  }
}

@keyframes fadeInUp {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0, 100%, 0);
            transform: translate3d(0, 100%, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: none;
            transform: none;
  }
}

.fadeInUp {
  -webkit-animation-name: fadeInUp;
          animation-name: fadeInUp;
}

/* fadeOut animation */
@-webkit-keyframes fadeOut {
  0% {opacity: 1;}
  100% {opacity: 0;}
}

@keyframes fadeOut {
  0% {opacity: 1;}
  100% {opacity: 0;}
}

.fadeOut {
  -webkit-animation-name: fadeOut;
          animation-name: fadeOut;
}

/* fadeOutDown animation */
@-webkit-keyframes fadeOutDown {
  0% {
    opacity: 1;
  }

  100% {
    opacity: 0;
    -webkit-transform: translate3d(0, 100%, 0);
            transform: translate3d(0, 100%, 0);
  }
}

@keyframes fadeOutDown {
  0% {
    opacity: 1;
  }

  100% {
    opacity: 0;
    -webkit-transform: translate3d(0, 100%, 0);
            transform: translate3d(0, 100%, 0);
  }
}

.fadeOutDown {
  -webkit-animation-name: fadeOutDown;
          animation-name: fadeOutDown;
}

@-webkit-keyframes sidebareffect {
  from {
    -webkit-transform: translate(100%, 0);
  }

  to {
    -webkit-transform: translate(0, 0);
  }
}

@-webkit-keyframes sidebareffect2 {
  from {
    -webkit-transform: translate(0, 0);
  }

  to {
    -webkit-transform: translate(100%, 0);
  }
}

/* ------------------------------------------------------------------ *\

Mobile

\* ------------------------------------------------------------------ */

#mobile{
  background-color: #ebebeb;
  overflow-x: hidden;
  height: 100%;
}

#mobile-header{
  width: 100%;
  text-align: center;
  z-index: 1;
  position: fixed;
  background-color: #fff;
  border-bottom: 1px solid rgba(0,0,0,0.2);
}
/* ... */

